added a line in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>example</title>
         <body>
             <h1>hello sukirdha</h1>
+            <h1>important note</h1>
         </body>
     </head>
 </html>
