--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <h1>hello sukirdha</h1>
             <h1>important note</h1>
-            <h2>not ok</h2>
+            <h2>helloo</h2>
         </body>
     </head>
 </html>
